--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -21,7 +21,7 @@
     <br/>
     <br/>Please note: This plugin is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     <br/>
-    <br/>The icons used in this plugin are part of the Fugue iconset (http://p.yusukekamiyamane.com/)
+    <br/>Icon made by Freepik from www.flaticon.com
   ]]></description>
     <vendor url="" email="info@stenschke.com">Kay Stenschke</vendor>
     <version>1.3.0</version>
