--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,5 +1,5 @@
 <!--
-  ~ Copyright 2013-2017 Kay Stenschke
+  ~ Copyright 2013-2018 Kay Stenschke
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -13,7 +13,7 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<idea-plugin url="https://plugins.jetbrains.com/idea/plugin/9434-sweep" version="2">
+<idea-plugin url="https://plugins.jetbrains.com/idea/plugin/9434-sweep">
     <name>Sweep</name>
     <description><![CDATA[
     The plugin adds a "Sweep files" button to the main toolbar.<br/>
