--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,5 +1,5 @@
 <!--
-  ~ Copyright 2013-2018 Kay Stenschke
+  ~ Copyright Kay Stenschke
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -16,29 +16,45 @@
 <idea-plugin url="https://plugins.jetbrains.com/idea/plugin/9434-sweep">
     <name>Sweep</name>
     <description><![CDATA[
-    The plugin adds a "Sweep files" button to the main toolbar.<br/>
-    One or more directories of temporary files within the current project can be configured (in the plugin settings) to be emptied when sweeping. The plugin settings allow to delete also hidden files and directories, and to exclude some files/directories from being swept via ignore pattern.
+    The plugin adds a shortcut for deleting files and directories from configured paths within your project.<br/>
+    The plugin adds a button into the main toolbar, and allows to setup a related keyboard shortcut.<br/>
     <br/>
-    <br/>Please note: This plugin is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    The configuration allows to setup (within the project settings) shortcuts for deletion of:<br/>
+    <br/>
+    <ul>
+      <li>One or more folders of temporary files within the project<li>
+      <li>Removal of hidden files and directories can be de/activated</li>
+      <li>Specific files/directories can be excluded from deletion using ignore-patterns</li>
+    </ul>
+    <br/><br/>
+    Please note: This plugin is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
+    either express or implied.
     <br/>
     <br/>Icon made by Freepik from www.flaticon.com
   ]]></description>
     <vendor url="" email="info@stenschke.com">Kay Stenschke</vendor>
-    <version>1.3.0</version>
+    <version>1.3.1</version>
     <change-notes><![CDATA[
+    <strong>1.3.1</strong>
     <ul>
-        <li>1.3.0
-            <ul>
-                <li>Updated to flat icon suiting modernized IDE theme</li>
-                <li>Code cleanup and modernization</li>
-           </ul>
-        <li>1.2.1
-            <ul>
-                <li>UI (Settings) and code cleanup, stability improvements: tested and fixed edge cases</li>
-                <li>Bugfix: Sweeping was including contents of sub-directories</li>
-            </ul>
-        </li>
-        <li>1.2.0 Added refresh of project tree after sweeping</li>
+        <li>Change README and CHANGELOG format from textile to markdown</li>
+        <li>Add release dates to changelog</li>
+        <li>Add TOC to README</li>
+        <li>Some code cleanup and modernization</li>
+    </ul>
+    <strong>1.3.0</strong>
+    <ul>
+        <li>Updated to flat icon suiting modernized IDE theme</li>
+        <li>Code cleanup and modernization</li>
+   </ul>
+   <strong>1.2.1</strong>
+    <ul>
+        <li>UI (Settings) and code cleanup, stability improvements: tested and fixed edge cases</li>
+        <li>Bugfix: Sweeping was including contents of sub-directories</li>
+    </ul>
+    <strong>1.2.0</strong>
+    <ul>
+        <li>Added refresh of project tree after sweeping</li>
     </ul>
   ]]></change-notes>
     <!-- see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html -->
